Mark extra and noinst dictionaries obsolete

--- a/components/meta-packages/history/history
+++ b/components/meta-packages/history/history
@@ -673,6 +673,8 @@ library/java/host-config@0.5.11,5.11-2015.0.1.0
 library/java/manual/locale/ja@0.5.11,5.11-2015.0.1.0
 library/java/manual@0.5.11,5.11-2015.0.1.0
 library/libproxy/libproxy-mozjs@0.3.1,5.11-2014.0.1.1
+library/myspell/dictionary/extra@2.30.0,5.11-2015.0.2.0
+library/myspell/dictionary/noinst@2.30.0,5.11-2015.0.2.0
 library/perl-5/archive-zip-5100@1.37,5.11-2014.1.1.1
 library/perl-5/authen-pam-5100@16,5.11-2014.1.1.2
 library/perl-5/database-5100@1.623,5.11-2014.0.1.1
