--- a/components/meta-packages/history/history
+++ b/components/meta-packages/history/history
@@ -502,6 +502,7 @@ desktop/compiz/library/g++/libcompizconfig@0.8.8,5.11-2014.0.1.0 desktop/compiz/
 desktop/media-player/moovida/moovida-plugins@0.5.11,5.11-2015.0.2.0
 desktop/media-player/moovida@0.5.11,5.11-2015.0.2.0
 desktop/media-player/songbird@0.5.11,5.11-2014.0.0.0
+desktop/project-management/openproj@1.4,5.11-2015.0.2.0
 desktop/virt-manager@0.6.1,5.11-2015.0.2.0
 developer/build/automake-19@1.9.6,5.11-5.12.0.0.0.16.0
 developer/clang-3.3@3.3,5.11-2015.0.1.2
